@@ -27,6 +27,7 @@
 * S5: Pass order_id to TransactionID [curiousepic]
 * NMI: Set ACH sec_code from options if present [curiousepic]
 * VisaNet Peru: Refactor merchant_id and purchase_number handling [shasum]
+* Braintree Blue: Pass descriptor_url field [curiousepic]
 
 
 == Version 1.58.0 (March 1, 2016)
